# QTBible

./: CMakeLists.txt  README.md
include/: MainDisplay.hpp  config.h.in  pch.hpp
include/Dialogs/: Settings.hpp
include/Network/: Download.hpp
include/Tools/: Bible.hpp  WordChart.hpp
include/Utils/: Download.hpp  Utils.hpp
include/Widgets/: TextPane.hpp  ToolPane.hpp
src/: MainDisplay.cpp  main.cpp
src/Dialogs/: Settings.cpp
src/Network/: Download.cpp
src/Tools/: Bible.cpp  WordChart.cpp
src/Utils/: Download.cpp
src/Widgets/: TextPane.cpp  ToolPane.cpp
